--- a/Dazed/Dazed.vcxproj
+++ b/Dazed/Dazed.vcxproj
@@ -122,6 +122,7 @@
   <ItemGroup>
     <ClInclude Include="Platform.h" />
     <ClInclude Include="Renderer.h" />
+    <ClInclude Include="stb_image.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
