--- a/Dazed/Dazed.vcxproj
+++ b/Dazed/Dazed.vcxproj
@@ -116,11 +116,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Maths.cpp" />
     <ClCompile Include="Platform.cpp" />
+    <ClCompile Include="Rasterize.cpp" />
     <ClCompile Include="Renderer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Maths.h" />
     <ClInclude Include="Platform.h" />
+    <ClInclude Include="Rasterize.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="stb_image.h" />
   </ItemGroup>
