--- a/Dazed/Dazed.vcxproj
+++ b/Dazed/Dazed.vcxproj
@@ -117,12 +117,14 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Maths.cpp" />
+    <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Platform.cpp" />
     <ClCompile Include="Rasterize.cpp" />
     <ClCompile Include="Renderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Maths.h" />
+    <ClInclude Include="Mesh.h" />
     <ClInclude Include="Platform.h" />
     <ClInclude Include="Rasterize.h" />
     <ClInclude Include="Renderer.h" />
